Add the definitions to the flashcards

--- a/index.html
+++ b/index.html
@@ -11,131 +11,131 @@
     <div class="container">
       <div class="row"><!--Row 1-->
         <div class="col-md-3">
-          <h2 id="row1column1"></h2>
+          <h2 id="row1column1">JavaScript (JS)</h2>
           <p>
-
+            an object-oriented computer programming language commonly used to create interactive effects within web browsers.
           </p>
         </div>
         <div class="col-md-3">
-          <h2 id="row1column2"></h2>
+          <h2 id="row1column2">Operators</h2>
           <p>
-
+             are used to assign values, compare values, perform arithmetic operations, and more.
           </p>
         </div>
         <div class="col-md-3">
-          <h2 id="row1column3"></h2>
+          <h2 id="row1column3">Variables</h2>
           <p>
-
+            are containers for storing data values.
           </p>
         </div>
         <div class="col-md-3">
-          <h2 id="row1column4"></h2>
+          <h2 id="row1column4">Variable naming conventions</h2>
           <p>
-
+            a set of rules for choosing the character sequence to be used for identifiers which denote variables, types, functions, and other entities in source code and documentation.
           </p>
         </div>
       </div><!--Row 1-->
       <div class="row"><!--Row 2-->
         <div class="col-md-3">
-          <h2 id="row2column1"></h2>
+          <h2 id="row2column1">Functions</h2>
           <p>
-
+            a block of code designed to perform a particular task.
           </p>
         </div>
         <div class="col-md-3">
-          <h2 id="row2column2"></h2>
+          <h2 id="row2column2">Methods</h2>
           <p>
-
+            actions you can perform (on HTML Elements).
           </p>
         </div>
         <div class="col-md-3">
-          <h2 id="row2column3"></h2>
+          <h2 id="row2column3">Arguments</h2>
           <p>
-
+            the real values passed to (and received by) the function.
           </p>
         </div>
         <div class="col-md-3">
-          <h2 id="row2column4"></h2>
+          <h2 id="row2column4">Parameters</h2>
           <p>
-
+            the names listed in the function definition.
           </p>
         </div>
       </div><!--Row 2-->
       <div class="row"><!--Row 3-->
         <div class="col-md-3">
-          <h2 id="row3column1"></h2>
+          <h2 id="row3column1">Return</h2>
           <p>
-
+            stops the execution of a function and returns a value from that function.
           </p>
         </div>
         <div class="col-md-3">
-          <h2 id="row3column2"></h2>
+          <h2 id="row3column2">Chaining methods</h2>
           <p>
-
+            allows us to run multiple jQuery methods (on the same element) within a single statement.
           </p>
         </div>
         <div class="col-md-3">
-          <h2 id="row3column3"></h2>
+          <h2 id="row3column3">Strings</h2>
           <p>
-
+            stores a series of characters
           </p>
         </div>
         <div class="col-md-3">
-          <h2 id="row3column4"></h2>
+          <h2 id="row3column4">Booleans</h2>
           <p>
-
+            represents either true or false
           </p>
         </div>
       </div><!--Row 3-->
       <div class="row"><!--Row 4-->
         <div class="col-md-3">
-          <h2 id="row4column1"></h2>
+          <h2 id="row4column1">Undefined</h2>
           <p>
-
+            indicates that a variable has not been assigned a value.
           </p>
         </div>
         <div class="col-md-3">
-          <h2 id="row4column2"></h2>
+          <h2 id="row4column2">NaN</h2>
           <p>
-
+            used when a variable or value does not equate to a number.
           </p>
         </div>
         <div class="col-md-3">
-          <h2 id="row4column3"></h2>
+          <h2 id="row4column3">Escape</h2>
           <p>
-
+            computes a new string in which certain characters have been replaced by a hexadecimal escape sequence.
           </p>
         </div>
         <div class="col-md-3">
-          <h2 id="row4column4"></h2>
+          <h2 id="row4column4">Alert</h2>
           <p>
-
+            displays an alert box with a specified message and an OK button.
           </p>
         </div>
       </div><!--Row 4-->
       <div class="row"><!--Row 5-->
         <div class="col-md-3">
-          <h2 id="row5column1"></h2>
+          <h2 id="row5column1">Comments</h2>
           <p>
-
+            can be used to explain code, and to make it more readable.
           </p>
         </div>
         <div class="col-md-3">
-          <h2 id="row5column2"></h2>
+          <h2 id="row5column2">jQuery</h2>
           <p>
-
+            a cross platform javaScript library.
           </p>
         </div>
         <div class="col-md-3">
-          <h2 id="row5column3"></h2>
+          <h2 id="row5column3">Attributes</h2>
           <p>
-
+            provide additional information about HTML elements.
           </p>
         </div>
         <div class="col-md-3">
-          <h2 id="row5column4"></h2>
+          <h2 id="row5column4">Fun</h2>
           <p>
-
+            Great Job!
           </p>
         </div>
       </div><!--Row 5-->
