Flashcards hide header when definition appears

--- a/index.html
+++ b/index.html
@@ -10,131 +10,131 @@
   <body>
     <div class="container">
       <div class="row"><!--Row 1-->
-        <div class="col-md-3">
-          <h2 id="row1column1">JavaScript (JS)</h2>
-          <p>
+        <div class="col-md-3 clickable">
+          <h2 id="row1column1a">JavaScript (JS)</h2>
+          <p id="row1column1">
             an object-oriented computer programming language commonly used to create interactive effects within web browsers.
           </p>
         </div>
-        <div class="col-md-3">
-          <h2 id="row1column2">Operators</h2>
-          <p>
+        <div class="col-md-3 clickable1">
+          <h2 id="row1column2a">Operators</h2>
+          <p id="row1column2">
              are used to assign values, compare values, perform arithmetic operations, and more.
           </p>
         </div>
-        <div class="col-md-3">
-          <h2 id="row1column3">Variables</h2>
-          <p>
+        <div class="col-md-3 clickable2">
+          <h2 id="row1column3a">Variables</h2>
+          <p id="row1column3">
             are containers for storing data values.
           </p>
         </div>
-        <div class="col-md-3">
-          <h2 id="row1column4">Variable naming conventions</h2>
-          <p>
+        <div class="col-md-3 clickable3">
+          <h2 id="row1column4a">Variable naming conventions</h2>
+          <p id="row1column4">
             a set of rules for choosing the character sequence to be used for identifiers which denote variables, types, functions, and other entities in source code and documentation.
           </p>
         </div>
       </div><!--Row 1-->
       <div class="row"><!--Row 2-->
-        <div class="col-md-3">
-          <h2 id="row2column1">Functions</h2>
-          <p>
+        <div class="col-md-3 clickable4">
+          <h2 id="row2column1a">Functions</h2>
+          <p id="row2column1">
             a block of code designed to perform a particular task.
           </p>
         </div>
-        <div class="col-md-3">
-          <h2 id="row2column2">Methods</h2>
-          <p>
+        <div class="col-md-3 clickable5">
+          <h2 id="row2column2a">Methods</h2>
+          <p id="row2column2">
             actions you can perform (on HTML Elements).
           </p>
         </div>
-        <div class="col-md-3">
-          <h2 id="row2column3">Arguments</h2>
-          <p>
+        <div class="col-md-3 clickable6">
+          <h2 id="row2column3a">Arguments</h2>
+          <p id="row2column3">
             the real values passed to (and received by) the function.
           </p>
         </div>
-        <div class="col-md-3">
-          <h2 id="row2column4">Parameters</h2>
-          <p>
+        <div class="col-md-3 clickable7">
+          <h2 id="row2column4a">Parameters</h2>
+          <p id="row2column4">
             the names listed in the function definition.
           </p>
         </div>
       </div><!--Row 2-->
       <div class="row"><!--Row 3-->
-        <div class="col-md-3">
-          <h2 id="row3column1">Return</h2>
-          <p>
+        <div class="col-md-3 clickable8">
+          <h2 id="row3column1a">Return</h2>
+          <p id="row3column1">
             stops the execution of a function and returns a value from that function.
           </p>
         </div>
-        <div class="col-md-3">
-          <h2 id="row3column2">Chaining methods</h2>
-          <p>
+        <div class="col-md-3 clickable9">
+          <h2 id="row3column2a">Chaining methods</h2>
+          <p id="row3column2">
             allows us to run multiple jQuery methods (on the same element) within a single statement.
           </p>
         </div>
-        <div class="col-md-3">
-          <h2 id="row3column3">Strings</h2>
-          <p>
+        <div class="col-md-3 clickable10">
+          <h2 id="row3column3a">Strings</h2>
+          <p id="row3column3">
             stores a series of characters
           </p>
         </div>
-        <div class="col-md-3">
-          <h2 id="row3column4">Booleans</h2>
-          <p>
+        <div class="col-md-3 clickable11">
+          <h2 id="row3column4a">Booleans</h2>
+          <p id="row3column4">
             represents either true or false
           </p>
         </div>
       </div><!--Row 3-->
       <div class="row"><!--Row 4-->
-        <div class="col-md-3">
-          <h2 id="row4column1">Undefined</h2>
-          <p>
+        <div class="col-md-3 clickable12">
+          <h2 id="row4column1a">Undefined</h2>
+          <p id="row4column1">
             indicates that a variable has not been assigned a value.
           </p>
         </div>
-        <div class="col-md-3">
-          <h2 id="row4column2">NaN</h2>
-          <p>
+        <div class="col-md-3 clickable13">
+          <h2 id="row4column2a">NaN</h2>
+          <p id="row4column2">
             used when a variable or value does not equate to a number.
           </p>
         </div>
-        <div class="col-md-3">
-          <h2 id="row4column3">Escape</h2>
-          <p>
+        <div class="col-md-3 clickable14">
+          <h2 id="row4column3a">Escape</h2>
+          <p id="row4column3">
             computes a new string in which certain characters have been replaced by a hexadecimal escape sequence.
           </p>
         </div>
-        <div class="col-md-3">
-          <h2 id="row4column4">Alert</h2>
-          <p>
+        <div class="col-md-3 clickable15">
+          <h2 id="row4column4a">Alert</h2>
+          <p id="row4column4">
             displays an alert box with a specified message and an OK button.
           </p>
         </div>
       </div><!--Row 4-->
       <div class="row"><!--Row 5-->
-        <div class="col-md-3">
-          <h2 id="row5column1">Comments</h2>
-          <p>
+        <div class="col-md-3 clickable16">
+          <h2 id="row5column1a">Comments</h2>
+          <p id="row5column1">
             can be used to explain code, and to make it more readable.
           </p>
         </div>
-        <div class="col-md-3">
-          <h2 id="row5column2">jQuery</h2>
-          <p>
+        <div class="col-md-3 clickable17">
+          <h2 id="row5column2a">jQuery</h2>
+          <p id="row5column2">
             a cross platform javaScript library.
           </p>
         </div>
-        <div class="col-md-3">
-          <h2 id="row5column3">Attributes</h2>
-          <p>
+        <div class="col-md-3 clickable18">
+          <h2 id="row5column3a">Attributes</h2>
+          <p id="row5column3">
             provide additional information about HTML elements.
           </p>
         </div>
-        <div class="col-md-3">
-          <h2 id="row5column4">Fun</h2>
-          <p>
+        <div class="col-md-3 clickable19">
+          <h2 id="row4column4a">Fun</h2>
+          <p id="row5column4">
             Great Job!
           </p>
         </div>
